2001-10-10  Glynn Foster <glynn.foster@sun.com>

	* gnome-gconf.c: Change to use proper gconf key for desktop wide
	  settings [ie. /desktop/gnome]

Tue Oct 09 18:22:34 2001  George Lebl <jirka@5z.com>

	* libgnome.schema, Makefile.am: schemas for preferences, this
	  replaces gnome-preferences API which is supposed to be gone
	  (And will be soon)

	* gnome-macros.h: also add prototypes for class_init and
	  instance_init to the macro, so that they can be just declared
	  sometime later without having to mess with forward declarations

2001-10-06 Malcolm Tredinnick <malcolm@commsecure.com.au>

	* gnome-program.c, gnome-triggers.c, gnome-triggers.h:
	* gnome-util.c, gnome-help.h, gnome-uri.h: Documentation updates
	and fiddling.

2001-10-05 Malcolm Tredinnick <malcolm@commsecure.com.au>

	* gnome-config.c, gnome-gconf.c, gnome-help.c, gnome-program.c:
	* gnome-score.c, gnome-sound.c, gnome-url.c: Documentation
	updates.

2001-10-04 Malcolm Tredinnick <malcolm@commsecure.com.au>

	* gnome-program.c, gnome-exec.c, gnome-18n.c: Documentation
	updates.

Sun Sep 30 14:41:52 2001  George Lebl <jirka@5z.com>

	* gnome-program.c: free data on finalize, copy argv stuff, and a bit
	  of cleanup

2001-09-28 Mark McLoughlin  <mark@skynet.ie>

	* libgnome/gnome-program.h: add lame GNOME_PARAM_NONE
	for clarity.

	* libgnome/gnome-init.c
	(gnome_bonobo_module_info_get): add missing initialiser.

2001-09-19  Frank Belew <frb@ximian.com>

	* gnome-init.c (gnomelib_options): add space to implicitly concatenated 	string

2001-09-19  Frank Belew <frb@ximian.com>

	* gnome-init.c (gnomelib_options): add quotation marks to continued 
	string in initializer

	* gnome-program.h: define program_invocation_short_name and
	program_invocation_name if not already defined in errno.h

2001-09-18  Havoc Pennington  <hp@redhat.com>

	* libgnome-2.0.pc.in (Requires): add gnome-vfs

2001-09-19  Ariel Rios  <ariel@gnu.org>

	* gnome-program.c (add_to_module_list): Cast the return